# cctty

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
scripts/: generate-homebrew-formula.sh
src/: args.rs  auth.rs  error.rs  lib.rs  logging.rs  main.rs  pty.rs  runner.rs  transcript.rs
src/runner/: claude_path.rs  sdk_control.rs  sdk_mcp.rs  session_id.rs  tty_text.rs
tests/: cctty_auth_api.rs  cctty_cli.rs  claude_differential.rs  compatibility_matrix.rs  sdk_integration.rs
tests/support/: mod.rs
