[package]
name = "cctty"
version = "0.2.6"
edition = "2024"
description = "Claude Agent SDK compatibility through the interactive Claude Code TTY"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pyiner/cctty"
keywords = ["claude", "agent-sdk", "tty", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "v5"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
wait-timeout = "0.2"
